--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -66,9 +66,41 @@
     <div class="m adapter-container">
 
         <div class="row">
-            <div class="col s12 m4 l2">
-                <img src="template.png" class="logo">
+            <!-- Tabs navigation -->
+            <div class="col s12">
+                <ul class="tabs">
+                    <li class="tab col s2">
+                        <a href="#tab-options" class="translate" data-lang="Options">Options</a>
+                    </li>
+                    <li class="tab col s2">
+                        <a href="#tab-input" class="translate" data-lang="Input Sources">Devices</a>
+                    </li>
+                </ul>
             </div>
+
+            <!-- Tabs content -->
+            <div id="tab-options" class="col s12 page">
+                <div class="row">
+                    <div class="col s11 m4 l2">
+                        <img src="pjlink.png" class="logo">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col">
+                        <input class="value text" id="iporhost" for="iporhost" size="25" maxlength="25" type="text">
+                        <label class="translate active">IP or Host Name</label>
+                    </div>
+                    <div class="input-field col">
+                        <input class="value number" id="port" for="port" type="number">
+                        <label class="translate active">TCP Port</label>
+                    </div>
+                    <div class="input-field col">
+                        <input class="value number" id="pollingInterval" for="pollingInterval" type="number">
+                        <label class="translate active">Polling interval (msec)</label>
+                    </div>
+                </div>
+
         </div>
 
         <!-- Put your content here -->
