--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -88,7 +88,7 @@
 
                 <div class="row">
                     <div class="input-field col">
-                        <input class="value text" id="iporhost" for="iporhost" size="25" maxlength="25" type="text">
+                        <input class="value text" id="iporhost" for="iporhost" size="30" maxlength="30" type="text">
                         <label class="translate active">IP or Host Name</label>
                     </div>
                     <div class="input-field col">
@@ -108,15 +108,15 @@
                 <div class="row">
                     <div class="input-field col">
                         <select  class="value text" id="protocol">
-                            <option value="Class#1" class="translate">PJLink Class 1 (V1.04)</option>
-                            <option value="Class#2" class="translate">PJLink Class 2 (V2.03)</option>
+                            <option value="Class#1" class="translate">PJLink Class 1</option>
+                            <option value="Class#2" class="translate">PJLink Class 2</option>
                         </select>
-                        <label class="translate active">Protocol</label>
+                        <label class="translate active" for="protocol"></label>
                     </div>
 
                     <div class="input-field col">
-                        <input class="value number" id="polltime" for="polltime" type="number">
-                        <label class="translate active">Polling Interval</label>
+                        <input class="value number" id="polltime" type="number" min="500">
+                        <label class="translate active" for="polltime"></label>
                         <span class="helper-text translate">interval</span>
                     </div>
                 </div>
