--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -111,12 +111,13 @@
                             <option value="Class#1" class="translate">PJLink Class 1</option>
                             <option value="Class#2" class="translate">PJLink Class 2</option>
                         </select>
-                        <label class="translate active" for="protocol"></label>
+                        <label class="translate active">Communication Protocol</label>
+
                     </div>
 
                     <div class="input-field col">
                         <input class="value number" id="polltime" type="number" min="500">
-                        <label class="translate active" for="polltime"></label>
+                        <label class="translate active">Polling Interval</label>
                         <span class="helper-text translate">interval</span>
                     </div>
                 </div>
