--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,3 +1,5 @@
+<!-- Admin Interface for PJLinkV2 Adapter -->
+
 <html>
 
 <head>
@@ -29,13 +31,13 @@
                     // do not call onChange direct, because onChange could expect some arguments
                     $key.prop('checked', settings[id])
                         .on('change', () => onChange())
-                        ;
+                    ;
                 } else {
                     // do not call onChange direct, because onChange could expect some arguments
                     $key.val(settings[id])
                         .on('change', () => onChange())
                         .on('keyup', () => onChange())
-                        ;
+                    ;
                 }
             });
             onChange(false);
@@ -63,64 +65,64 @@
 
 <body>
 
-    <div class="m adapter-container">
+<div class="m adapter-container">
 
-        <div class="row">
-            <!-- Tabs navigation -->
-            <div class="col s12">
-                <ul class="tabs">
-                    <li class="tab col s2">
-                        <a href="#tab-options" class="translate" data-lang="Options">Options</a>
-                    </li>
-                    <li class="tab col s2">
-                        <a href="#tab-input" class="translate" data-lang="Input Sources">Devices</a>
-                    </li>
-                </ul>
+    <div class="row">
+        <!-- Tabs navigation -->
+        <div class="col s12">
+            <ul class="tabs">
+                <li class="tab col s2">
+                    <a href="#tab-options" class="translate" data-lang="Options">Options</a>
+                </li>
+                <li class="tab col s2">
+                    <a href="#tab-input" class="translate" data-lang="Input Sources">Devices</a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- Tabs content -->
+        <div id="tab-options" class="col s12 page">
+            <div class="row">
+                <div class="col s11 m4 l2">
+                    <img src="pjlink.png" class="logo">
+                </div>
             </div>
 
-            <!-- Tabs content -->
-            <div id="tab-options" class="col s12 page">
-                <div class="row">
-                    <div class="col s11 m4 l2">
-                        <img src="pjlink.png" class="logo">
-                    </div>
+            <div class="row">
+                <div class="input-field col">
+                    <input class="value text" id="iporhost" for="iporhost" size="30" maxlength="30" type="text">
+                    <label class="translate active">IP or Host Name</label>
+                </div>
+                <div class="input-field col">
+                    <input class="value number" id="port" for="port" type="number">
+                    <label class="translate active">TCP Port</label>
+                    <span class="helper-text translate">default_port</span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col">
+                    <input class="value text" id="password" for="password" size="55" maxlength="55" type="password">
+                    <label class="translate active">Password</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col">
+                    <select class="value text" id="protocol" size="30">
+                        <option value="Class#1" class="translate">PJLink Class 1</option>
+                        <option value="Class#2" class="translate">PJLink Class 2</option>
+                    </select>
+                    <label class="translate active">Communication Protocol</label>
+
                 </div>
 
-                <div class="row">
-                    <div class="input-field col">
-                        <input class="value text" id="iporhost" for="iporhost" size="30" maxlength="30" type="text">
-                        <label class="translate active">IP or Host Name</label>
-                    </div>
-                    <div class="input-field col">
-                        <input class="value number" id="port" for="port" type="number">
-                        <label class="translate active">TCP Port</label>
-                        <span class="helper-text translate">default_port</span>
-                    </div>
+                <div class="input-field col">
+                    <input class="value number" id="polltime" for="polltime" type="number" min="500">
+                    <label class="translate active">Polling Interval</label>
+                    <span class="helper-text translate">interval</span>
                 </div>
-
-                <div class="row">
-                    <div class="input-field col">
-                        <input class="value text" id="password" for="password" size="55" maxlength="55" type="password">
-                        <label class="translate active">Password</label>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="input-field col">
-                        <select  class="value text" id="protocol">
-                            <option value="Class#1" class="translate">PJLink Class 1</option>
-                            <option value="Class#2" class="translate">PJLink Class 2</option>
-                        </select>
-                        <label class="translate active">Communication Protocol</label>
-
-                    </div>
-
-                    <div class="input-field col">
-                        <input class="value number" id="polltime" type="number" min="500">
-                        <label class="translate active">Polling Interval</label>
-                        <span class="helper-text translate">interval</span>
-                    </div>
-                </div>
+            </div>
 
         </div>
 
@@ -140,7 +142,7 @@
         </div>
 
     </div>
-    </div>
+</div>
 
 </body>
 
