--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -109,12 +109,11 @@
 
             <div class="row">
                 <div class="input-field col">
-                    <select class="value text" id="protocol" size="30">
+                    <select class="value text" id="protocol" for="protocol" size="30" maxlength="30">
                         <option value="Class#1" class="translate">PJLink Class 1</option>
                         <option value="Class#2" class="translate">PJLink Class 2</option>
                     </select>
-                    <label class="translate active">Communication Protocol</label>
-
+                    <label class="translate active" size="30">Communication Protocol</label>
                 </div>
 
                 <div class="input-field col">
@@ -124,21 +123,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <!-- Put your content here -->
-
-        <!-- For example columns with settings: -->
-        <div class="row">
-            <div class="col s6 input-field">
-                <input type="checkbox" class="value" id="option1" />
-                <label for="option1" class="translate">option1</label>
-            </div>
-
-            <div class="col s6 input-field">
-                <input type="text" class="value" id="option2" />
-                <label for="option2" class="translate">option2</label>
-            </div>
         </div>
 
     </div>
