--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -83,12 +83,12 @@
         <!-- Tabs content -->
         <div id="tab-options" class="col s12 page">
             <div class="row">
-                <div class="col s11 m4 l2">
                     <img src="pjlink.png" class="logo">
                 </div>
             </div>
 
             <div class="row">
+                <div class="col s12 m4 l2">
                 <div class="input-field col">
                     <input class="value text" id="iporhost" for="iporhost" size="30" maxlength="30" type="text">
                     <label class="translate active">IP or Host Name</label>
@@ -101,6 +101,7 @@
             </div>
 
             <div class="row">
+                <div class="col s12 m4 l2">
                 <div class="input-field col">
                     <input class="value text" id="password" for="password" size="55" maxlength="55" type="password">
                     <label class="translate active">Password</label>
@@ -108,12 +109,13 @@
             </div>
 
             <div class="row">
+                <div class="col s12 m4 l2">
                 <div class="input-field col">
-                    <select class="value text" id="protocol" for="protocol" size="30" maxlength="30">
+                    <select class="value text" id="protocol" size="30" maxlength="30">
                         <option value="Class#1" class="translate">PJLink Class 1</option>
                         <option value="Class#2" class="translate">PJLink Class 2</option>
                     </select>
-                    <label class="translate active" size="30">Communication Protocol</label>
+                    <label class="translate active">Device Protocol</label>
                 </div>
 
                 <div class="input-field col">
