--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -98,6 +98,7 @@
                     <label class="translate active">TCP Port</label>
                     <span class="helper-text translate">default_port</span>
                 </div>
+                </div>
             </div>
 
             <div class="row">
@@ -105,6 +106,7 @@
                 <div class="input-field col">
                     <input class="value text" id="password" for="password" size="55" maxlength="55" type="password">
                     <label class="translate active">Password</label>
+                </div>
                 </div>
             </div>
 
@@ -117,7 +119,7 @@
                     </select>
                     <label class="translate active">Device Protocol</label>
                 </div>
-
+                </div>
                 <div class="input-field col">
                     <input class="value number" id="polltime" for="polltime" type="number" min="500">
                     <label class="translate active">Polling Interval</label>
